sofia-rs/tui/src/chatwidget/snapshots/sofia_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Sofia to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
