sofia-rs/tui/src/chatwidget/snapshots/sofia_tui__chatwidget__tests__overlapping_hook_live_cell_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"{first_running_snapshot}\\n\\n{second_running_snapshot}\\n\\n{older_completed_snapshot}\\n\\n{all_completed_snapshot}\")"
---
pre running
activity:
"                                                                                "
"• Thinking (0s • esc to interrupt) · checking command policy                    "
"                                                                                "
"                                                                                "
"› Ask Sofia to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
history:
<empty>

post running
activity:
"                                                                                "
"• Thinking (0s • esc to interrupt) · Running hooks                              "
"                                                                                "
"                                                                                "
"› Ask Sofia to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
history:
<empty>

pre completed
activity:
"                                                                                "
"• Thinking (0s • esc to interrupt) · checking output policy                     "
"                                                                                "
"                                                                                "
"› Ask Sofia to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
history:
<empty>

all completed
activity:
"                                                                                "
"• Thinking (0s • esc to interrupt)                                              "
"                                                                                "
"                                                                                "
"› Ask Sofia to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
history:
<empty>
